kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuprjapp
  labels: 
    app: kuprjapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuprjapp
  template:
    metadata:
      labels:
        app: kuprjapp
    spec:
      containers:
      - name: kuprjapp
        image: vprocontainers/vprofileapp
        imagePullPolicy: Always
        ports:
        - name: kuprjapp-port
          containerPort: 8080
