kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuprjdb
  labels:
    app: kuprjdb
spec:
  selector:
    matchLabels:
      app: kuprjdb
  replicas: 1
  template:
    metadata:
      labels:
        app: kuprjdb
    spec:
      containers:
      - name: kuprjdb
        image: vprocontainers/vprofiledb
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: kuprj-db-data
        ports:
        - name: kuprjdb-port
          containerPort: 3306
      volumes:
        - name: kuprj-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
