kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuprjapp-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuprjapp
  type: ClusterIP
