kubedefs/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuprjdb
spec:
  ports:
  - port: 3306
    targetPort: kuprjdb-port
    protocol: TCP
  selector:
    app: kuprjdb
  type: ClusterIP
