kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuprjcache01
spec:
  ports:
  - port: 11211
    targetPort: kuprjmc-port
    protocol: TCP
  selector:
    app: kuprjmc 
  type: ClusterIP
