kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuprj-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: appname.abdo_elwaly.xyz  # Domain name url record
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuprjapp-service
            port:
              number: 8080
